--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "main": "index.js",
   "author": "sex",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/ejs": "^3.1.2",
+    "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
+    "@types/lodash": "^4.14.195",
+    "@types/morgan": "^1.9.4",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "express-fileupload": "^1.2.0",
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
